package com.deeplink.crawler

import com.deeplink.common.v1.FuzzyDate
import com.deeplink.domain.v1.Gender
import com.deeplink.domain.v1.Person
import org.apache.kafka.clients.producer.ProducerConfig
import org.apache.kafka.common.serialization.ByteArraySerializer
import org.apache.kafka.common.serialization.StringSerializer
import org.slf4j.LoggerFactory
import org.springframework.boot.CommandLineRunner
import org.springframework.boot.autoconfigure.SpringBootApplication
import org.springframework.boot.runApplication
import org.springframework.context.annotation.Bean
import org.springframework.context.annotation.Configuration
import org.springframework.kafka.core.DefaultKafkaProducerFactory
import org.springframework.kafka.core.KafkaTemplate
import org.springframework.kafka.core.ProducerFactory
import java.util.UUID

@SpringBootApplication
class FakeCrawlerApplication : CommandLineRunner {
    private val logger = LoggerFactory.getLogger(FakeCrawlerApplication::class.java)

    // –í–Ω–µ–¥—Ä—è–µ–º —à–∞–±–ª–æ–Ω Kafka –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏–π
    // –ö–ª—é—á - String, –ó–Ω–∞—á–µ–Ω–∏–µ - ByteArray (Protobuf)
    @Bean
    fun kafkaTemplate(): KafkaTemplate<String, ByteArray> {
        return KafkaTemplate(producerFactory())
    }

    // –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –ø—Ä–æ–¥—é—Å–µ—Ä–∞ (–æ–±—ã—á–Ω–æ –≤ application.yml, –Ω–æ –¥–ª—è —Å–∫—Ä–∏–ø—Ç–∞ –º–æ–∂–Ω–æ –∏ —Ç—É—Ç)
    fun producerFactory(): ProducerFactory<String, ByteArray> {
        val configProps = mapOf(
            ProducerConfig.BOOTSTRAP_SERVERS_CONFIG to "localhost:19092",
            ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG to StringSerializer::class.java,
            ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG to ByteArraySerializer::class.java
        )
        return DefaultKafkaProducerFactory(configProps)
    }

    override fun run(vararg args: String?) {
        val template = kafkaTemplate()
        val topic = "ingestion.raw.fake"

        logger.info("üöÄ Starting Fake Kotlin Crawler...")

        for (i in 1..5) {
            // 1. –°–æ–∑–¥–∞–µ–º –æ–±—ä–µ–∫—Ç Person –∏—Å–ø–æ–ª—å–∑—É—è —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–π Protobuf Builder
            val person = Person.newBuilder()
                .setId(UUID.randomUUID().toString())
                .setDisplayName("Kotlin Generated User #$i")
                .setNotes("Created by Kotlin Fake Crawler")
                .setGender(if (i % 2 == 0) Gender.GENDER_FEMALE else Gender.GENDER_MALE)
                .setBirthDate(
                    FuzzyDate.newBuilder()
                        .setYear(1990 + i)
                        .setOriginalString("Early 90s")
                        .build()
                )
                .addAliases("Bot_$i")
                .build()

            // 2. –°–µ—Ä–∏–∞–ª–∏–∑—É–µ–º –≤ –±–∞–π—Ç—ã
            val bytes = person.toByteArray()

            // 3. –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –≤ Kafka
            logger.info("üì§ Sending person: ${person.displayName}")
            template.send(topic, person.id, bytes)

            Thread.sleep(1000) // –ü–∞—É–∑–∞ –¥–ª—è –Ω–∞–≥–ª—è–¥–Ω–æ—Å—Ç–∏
        }

        logger.info("‚úÖ Done. Exiting.")
    }
}

fun main(args: Array<String>) {
    runApplication<FakeCrawlerApplication>(*args)
}