package main

import (
	"fmt"
	"log"
	"os"
	"time"

	"github.com/confluentinc/confluent-kafka-go/kafka"
	"google.golang.org/protobuf/proto"

	// –ò–º–ø–æ—Ä—Ç–∏—Ä—É–µ–º —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–π –∫–æ–¥
	commonv1 "github.com/yourusername/deeplink/crawlers/gen/go/deeplink/common/v1"
	domainv1 "github.com/yourusername/deeplink/crawlers/gen/go/deeplink/common/v1"
)

func main() {
	fmt.Println("üï∑Ô∏è Starting Fake Go Crawler...")

	// –ß–∏—Ç–∞–µ–º –∞–¥—Ä–µ—Å –±—Ä–æ–∫–µ—Ä–∞ –∏–∑ ENV, –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é localhost (–¥–ª—è –ª–æ–∫–∞–ª—å–Ω–æ–≥–æ –∑–∞–ø—É—Å–∫–∞)
	broker := os.Getenv("BOOTSTRAP_SERVERS")
	if broker == "" {
		broker = "localhost:19092"
	}
	fmt.Printf("üîå Connecting to Kafka at: %s\n", broker)

	// 1. –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ Redpanda
	p, err := kafka.NewProducer(&kafka.ConfigMap{
		"bootstrap.servers": broker,
		"client.id":         "go-crawler-01",
		"acks":              "all",
	})
	if err != nil {
		log.Fatalf("Failed to create producer: %s\n", err)
	}
	defer p.Close()

	topic := "ingestion.raw.fake"

	// 2. –ë–µ—Å–∫–æ–Ω–µ—á–Ω—ã–π —Ü–∏–∫–ª –≥–µ–Ω–µ—Ä–∞—Ü–∏–∏ –¥–∞–Ω–Ω—ã—Ö
	for i := 0; i < 5; i++ {
		// –°–æ–∑–¥–∞–µ–º —Ñ–µ–π–∫–æ–≤–æ–≥–æ —á–µ–ª–æ–≤–µ–∫–∞ (Protobuf)
		person := &domainv1.Person{
			Id:          fmt.Sprintf("go-generated-%d", i),
			DisplayName: fmt.Sprintf("John Doe #%d", i),
			Notes:       "Discovered by Go Crawler via Kafka",
			Gender:      domainv1.Gender_GENDER_MALE,
			BirthDate: &commonv1.FuzzyDate{
				Year: 1990 + int32(i),
			},
		}

		// –°–µ—Ä–∏–∞–ª–∏–∑–∞—Ü–∏—è –≤ –±–∞–π—Ç—ã
		out, err := proto.Marshal(person)
		if err != nil {
			log.Fatalln("Failed to encode address book:", err)
		}

		// –û—Ç–ø—Ä–∞–≤–∫–∞ –≤ Kafka
		err = p.Produce(&kafka.Message{
			TopicPartition: kafka.TopicPartition{Topic: &topic, Partition: kafka.PartitionAny},
			Value:          out,
		}, nil)

		if err != nil {
			log.Printf("‚ùå Failed to produce: %v\n", err)
		} else {
			fmt.Printf("‚úÖ Sent person: %s\n", person.DisplayName)
		}

		// –ñ–¥–µ–º –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–µ–Ω–∏—è –¥–æ—Å—Ç–∞–≤–∫–∏
		p.Flush(1000)
		time.Sleep(2 * time.Second)
	}
}
