package com.deeplink.graph

import com.deeplink.common.v1.FuzzyDate
import com.deeplink.domain.v1.Gender
import com.deeplink.domain.v1.Person
import com.deeplink.graph.v1.GraphServiceGrpcKt
import com.deeplink.graph.v1.SavePersonRequest
import io.grpc.ManagedChannelBuilder
import kotlinx.coroutines.runBlocking

/**
 * –†—É—á–Ω–æ–π —Å–∫—Ä–∏–ø—Ç –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ä–∞–±–æ—Ç—ã —Å–µ—Ä–≤–∏—Å–∞.
 * –ó–∞–ø—É—Å–∫–∞–µ—Ç—Å—è –∫–∞–∫ –æ–±—ã—á–Ω–∞—è –ø—Ä–æ–≥—Ä–∞–º–º–∞ (—Ñ—É–Ω–∫—Ü–∏—è main), –ø–æ–∫–∞ –∑–∞–ø—É—â–µ–Ω –æ—Å–Ω–æ–≤–Ω–æ–π —Å–µ—Ä–≤–µ—Ä.
 */
fun main() = runBlocking {
    println("üîå –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ –ª–æ–∫–∞–ª—å–Ω–æ–º—É gRPC —Å–µ—Ä–≤–µ—Ä—É –Ω–∞ –ø–æ—Ä—Ç—É 9090...")

    // 1. –°–æ–∑–¥–∞–µ–º –∫–∞–Ω–∞–ª —Å–≤—è–∑–∏ (Connection)
    val channel = ManagedChannelBuilder.forAddress("localhost", 9090)
        .usePlaintext() // –ò—Å–ø–æ–ª—å–∑—É–µ–º –±–µ–∑ SSL –¥–ª—è –ª–æ–∫–∞–ª—å–Ω—ã—Ö —Ç–µ—Å—Ç–æ–≤
        .build()

    // 2. –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç–∞ (Stub)
    val stub = GraphServiceGrpcKt.GraphServiceCoroutineStub(channel)

    // 3. –ü–æ–¥–≥–æ—Ç–∞–≤–ª–∏–≤–∞–µ–º —Ç–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ (Pavel Durov)
    val person = Person.newBuilder()
        .setDisplayName("Pavel Durov")
        .addAliases("CEO of Telegram")
        .addAliases("Architect")
        .setGender(Gender.GENDER_MALE)
        .setNotes("Created via Manual Client Test")
        .setBirthDate(
            FuzzyDate.newBuilder()
                .setYear(1984)
                .setMonth(10)
                .setDay(10)
                .build()
        )
        .build()

    println("üì§ –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å SavePerson...")

    try {
        // 4. –í—ã–∑—ã–≤–∞–µ–º —É–¥–∞–ª–µ–Ω–Ω—ã–π –º–µ—Ç–æ–¥
        val response = stub.savePerson(
            SavePersonRequest.newBuilder()
                .setPerson(person)
                .build()
        )

        println("‚úÖ –£–°–ü–ï–•! –û–±—ä–µ–∫—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω.")
        println("üÜî Neo4j Node ID: ${response.id}")

    } catch (e: Exception) {
        println("‚ùå –û–®–ò–ë–ö–ê: ${e.message}")
        e.printStackTrace()
    } finally {
        channel.shutdown()
    }
}